k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pod-info
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
