k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info
  namespace: pod-info
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pod-info
  template:
    metadata:
      labels:
        app: pod-info
    spec:
      containers:
        - name: pod-info
          image: 405903923186.dkr.ecr.us-east-1.amazonaws.com/tf-multi-account-dev-pod-info:latest
          imagePullPolicy: Always   # always pull from ECR, never use a cached image
          ports:
            - containerPort: 8080
          resources:
            requests:              # minimum guaranteed resources
              cpu: 100m            # 100 millicores = 0.1 CPU
              memory: 128Mi
            limits:                # hard ceiling — pod is killed if it exceeds this
              cpu: 250m
              memory: 256Mi
          livenessProbe:           # K8s restarts the pod if this fails
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
      topologySpreadConstraints:   # spread pods evenly across AZs
        - maxSkew: 1               # at most 1 pod difference between any two AZs
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: pod-info
