k8s/telemetry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tel-service
  namespace: pod-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tel-service
  template:
    metadata:
      labels:
        app: tel-service
    spec:
      containers:
        - name: tel-service
          image: 405903923186.dkr.ecr.us-east-1.amazonaws.com/tf-multi-account-dev-telemetry-pod-info:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
