k8s/org-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: org-service
  namespace: pod-info
spec:
  selector:
    app: org-service
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
