k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info
  namespace: pod-info
spec:
  selector:
    app: pod-info
  type: NodePort          # ALB ingress controller requires NodePort or ClusterIP with ip target type
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
