k8s/telemetry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tel-service
  namespace: pod-info
spec:
  selector:
    app: tel-service
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
