k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-info
  namespace: pod-info
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - http:
        paths:
          - path: /org
            pathType: Prefix
            backend:
              service:
                name: org-service
                port:
                  number: 80
          - path: /telemetry
            pathType: Prefix
            backend:
              service:
                name: tel-service
                port:
                  number: 80
